fix style overflow bug in related_snapshot component
Type: BF
Jira: HALO-1592

--- a/client/components/related_snapshot/style/index.less
+++ b/client/components/related_snapshot/style/index.less
@@ -118,6 +118,7 @@
       }
       .content {
         flex: 1;
+        overflow: hidden;
         height: 40px;
         line-height: 40px;
         border-bottom: 1px solid @content-bottom-color;
